--- a/ceramic-tutorial/package.json
+++ b/ceramic-tutorial/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.2",
     "@self.id/react": "^0.4.0",
     "@self.id/web": "^0.5.0",
+    "@tanstack/react-query": "^4.22.0",
     "ethers": "^5.7.2",
     "key-did-provider-ed25519": "^2.0.1",
     "next": "13.1.2",
